<resources>
    <string name="app_name">Github User</string>
    <string name="top_user">Top User</string>
    <string name="recomendation">May you like them</string>
    <string name="name_placeholder">Name Placeholder</string>
    <string name="username_placeholder">Username</string>
    <string name="Number">755</string>
    <string name="repository">Repository</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="dump_location">8502 Preston Rd. Inglewood, Maine 98380</string>
    <string name="dump_work">Google</string>

</resources>