<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_primary"
    android:orientation="vertical"
    tools:context=".UserDetail">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="450dp">

        <ImageView
            android:id="@+id/user_detail_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/user5" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white_transparent"
            android:src="@drawable/ic_baseline_chevron_left_24"
            app:borderWidth="0dp"
            app:tint="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/avatar_overlay"
            android:padding="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginBottom="44dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/name_detail_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|bottom"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/name_placeholder"
                        android:textColor="@color/white"
                        android:textSize="30dp" />

                    <TextView
                        android:id="@+id/name_detail_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/username_placeholder"
                        android:textSize="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/badge"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_crown"
                        app:tint="@color/gold"/>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="-30dp"
        android:background="@drawable/detail_user_overlay"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/content_pad"
            android:orientation="vertical"
            android:padding="20dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/follower"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/user_detail_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/Number"
                        android:textColor="@color/white"
                        android:textSize="30dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/following"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/user_detail_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/Number"
                        android:textColor="@color/white"
                        android:textSize="30dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/repository"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/user_detail_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/Number"
                        android:textColor="@color/white"
                        android:textSize="30dp" />
                </LinearLayout>

            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/content_pad"
            android:orientation="vertical"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_baseline_location_on_24" />

                    <TextView
                        android:id="@+id/user_detail_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/dump_location" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_baseline_home_work_24" />

                    <TextView
                        android:id="@+id/user_detail_work_at"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/dump_work" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/is_top_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|left"
            android:background="@drawable/content_pad"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_crown"/>
            <TextView
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/open_sans"
                android:textSize="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_user"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>