<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_user_item_radius"
    android:backgroundTint="@color/dark_secondary"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:paddingRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:paddingBottom="5dp"
    android:id="@+id/user_item_card">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:src="@drawable/user2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/name_placeholder"
            android:textColor="@color/white"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/user_positon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_placeholder"
            android:textSize="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="right">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/top_user_item_radius"
                android:backgroundTint="@color/dark_additional"
                android:gravity="center"
                android:padding="4dp">

                <ImageView
                    android:layout_marginLeft="5dp"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/ic_repository" />

                <TextView
                    android:id="@+id/user_repo"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/Number"
                    android:textSize="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/top_user_item_radius"
                android:backgroundTint="@color/dark_additional"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <ImageView
                    android:layout_marginLeft="5dp"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/ic_follower" />

                <TextView
                    android:id="@+id/user_follower"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Number"
                    android:textSize="8dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>